# django-conditions

./: .gitignore  .readthedocs.yaml  .travis.yml  LICENSE  MANIFEST.in  README.md  pyproject.toml  runtests.py  setup.py  tasks.py
.github/workflows/: ci.yml
conditions/: __init__.py  conditions.py  examples.py  exceptions.py  fields.py  lists.py  models.py  tests.py  types.py
conditions/static/conditions/js/: conditions_widget.js
conditions/templates/: conditions_widget.html
conditions/templates/conditions/: conditions_widget.html
conditions/tests/: admin.py  conditions.py  models.py  tests.py
docs/: Makefile  about.rst  conf.py  exceptions.rst  index.rst  install.rst  keys.rst  kwargs.rst  lists.rst  operators.rst  usage.rst
tests/: conditions.py  models.py  tests.py  urls.py
tests/migrations/: 0001_initial.py
